# ADP

./: Cargo.toml  LICENSE  README.md
agents/: README.md  architect.rs  coder.rs  researcher.rs  tester.rs
config/: default.toml
crates/adp-core/: Cargo.toml
crates/adp-core/migrations/: V1__initial.sql
crates/adp-core/proto/adp/core/v1/: agent.proto  delegation.proto  event.proto  task.proto
crates/adp-core/src/: db.rs  error.rs  lib.rs  scheduler.rs  state_machine.rs  store.rs  store_libsql.rs  task.rs
crates/adp-core/tests/: libsql_store_integration.rs  scheduler_integration.rs
crates/adp-delegation/: Cargo.toml
crates/adp-delegation/src/: consensus.rs  engine.rs  error.rs  lib.rs  registry.rs  strategy.rs
crates/adp-delegation/tests/: registry_test.rs  strategy_test.rs
crates/adp-desktop/: Cargo.toml
crates/adp-desktop/src/: commands.rs  error.rs  lib.rs  menu.rs  state.rs
crates/adp-gateway/: Cargo.toml
crates/adp-gateway/src/: error.rs  grpc.rs  lib.rs  rest.rs  websocket.rs
crates/adp-mcp/: Cargo.toml
crates/adp-mcp/src/: adapter.rs  error.rs  lib.rs  protocol.rs
crates/adp-memory/: Cargo.toml
crates/adp-memory/src/: context_window.rs  conversation.rs  error.rs  lib.rs  vector_store.rs
crates/adp-router/: Cargo.toml
crates/adp-router/src/: error.rs  inference.rs  lib.rs  model.rs  router.rs  token_manager.rs
crates/adp-runtime/: Cargo.toml
crates/adp-runtime/src/: agent.rs  capabilities.rs  error.rs  lib.rs  mcp.rs  resources.rs  sandbox.rs
crates/adp-runtime/tests/: capabilities_test.rs  resources_test.rs
docs/: protocol.md
docs/adr/: 0001-task-state-machine.md
