[workspace]
members = [
    "crates/adp-core",
    "crates/adp-runtime",
    "crates/adp-delegation",
    "crates/adp-memory",
    "crates/adp-mcp",
    "crates/adp-router",
    "crates/adp-gateway",
    "crates/adp-desktop",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["ADP Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
ulid = { version = "1.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
