[package]
name = "adp-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
adp-core = { path = "../adp-core" }
adp-runtime = { path = "../adp-runtime" }
adp-delegation = { path = "../adp-delegation" }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"
tonic = "0.12"
prost = "0.13"
tower = "0.5"
axum = "0.7"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
