[package]
name = "adp-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
adp-core = { path = "../adp-core" }
adp-runtime = { path = "../adp-runtime" }
adp-delegation = { path = "../adp-delegation" }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"
qdrant-client = "1.12"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
